Refactored views Merchant & remitter working
