# payment-api/api/controllers/merchant.js
@@ -14,11 +14,15 @@ function getMerchant(req, res){
   // variables defined in the Swagger document can be referenced using req.swagger.params.{parameter_name}
   var abn = req.swagger.params.abn.value;
 
-  db.view("merchants", "merchant_by_abn", {key: abn}, function(err, body){
+  mobilePaymentsDB.merchantByABN(abn, function(err, body){
     if(body.rows.length != 0){
+      console.log("[INF]", "Getting merchant by ABN: " + abn);
+
       merchant = body.rows[0].value;
+      console.log(util.inspect(merchant));
       res.json(merchant);
     }else{
+      console.log("[ERR]", err);
       res.status("404").json("Not found")
     }
   });
@@ -30,8 +34,8 @@ function addMerchant(req, res){
   console.log("[INF]", "Adding merchant: ");
   console.log(util.inspect(merchant));
   
-  db.view("merchants", "merchant_by_abn", {key: merchant.abn}, function(err, body){
-    if(body.rows.length != 0){
+  mobilePaymentsDB.merchantByABN(merchant.abn, function(err, body){
+    if(!err && body.rows.length != 0){
       var msg = "Merchant with abn \"" + merchant.abn + "\" already exists.";
       console.log("[ERR]", msg);
       res.status("405").json(msg);
@@ -57,31 +61,31 @@ function updateMerchant(req, res){
   var newMerchant = req.body;
   var merchant;
 
-  db.view("merchants", "merchant_by_abn", {key: abn}, function(err, body){
+  mobilePaymentsDB.merchantByABN(abn, function(err, body){
     if(body.rows.length != 0){
       console.log("[INF]", util.inspect(body));
       merchant = body.rows[0].value;
+      
+      merchant.merchantName = newMerchant.merchantName || merchant.merchantName;
+      if(merchant.account){
+        merchant.account.name = newMerchant.account.name || merchant.account.name;
+        merchant.account.bsb = newMerchant.account.bsb || merchant.account.bsb;
+        merchant.account.account = newMerchant.account.account || merchant.account.account;
+      };
+  
+      db.insert(merchant, function(err, body, header){
+        if (err) {
+          console.log('[merchant.update] ', err.message);
+          return;
+        }
+        console.log("[INF]", 'Merchant updated.')
+        var newMerchant = body;
+        console.log(newMerchant);
+        res.json(newMerchant);
+      });
     }else{
       res.status("404").json("Not found")
     };
-
-    merchant.merchantName = newMerchant.merchantName || merchant.merchantName;
-    if(merchant.account){
-      merchant.account.name = newMerchant.account.name || merchant.account.name;
-      merchant.account.bsb = newMerchant.account.bsb || merchant.account.bsb;
-      merchant.account.account = newMerchant.account.account || merchant.account.account;
-    };
-
-    db.insert(merchant, function(err, body, header){
-      if (err) {
-        console.log('[merchant.update] ', err.message);
-        return;
-      }
-      console.log("[INF]", 'you have updates the merchant.')
-      var newMerchant = body;
-      console.log(newMerchant);
-      res.json(newMerchant);
-    });
   });
 };
 
@@ -91,7 +95,7 @@ function deleteMerchant(req, res){
   var abn = req.swagger.params.abn.value;
   var merchant;
   
-  db.view("merchants", "merchant_by_abn", {key: abn}, function(err, body){
+  mobilePaymentsDB.merchantByABN(abn, function(err, body){
     if(body.rows.length != 0){
       merchant = body.rows[0].value;
       db.destroy(merchant._id, merchant._rev, function(err, body){
