# payment-api/api/swagger/swagger.yaml
@@ -18,6 +18,7 @@ consumes:
 produces:
   - application/json
 paths:
+  # Remitter resources
   /remitter:
     # binds a127 app logic to a route
     x-swagger-router-controller: remitter
@@ -69,8 +70,8 @@ paths:
           schema:
             $ref: "#/definitions/Remitter"
             required:
-              - name
-              - identifier
+              - remitterName
+              - mobileNumber
               - acount
       responses:
         "200":
@@ -133,6 +134,123 @@ paths:
           description: Not found
           schema:
             $ref: "#/definitions/ErrorResponse"
+
+  # Merchant resources
+  /merchant:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: merchant
+    get:
+      description: Get a merchant by ABN
+      # used as the method name of the controller
+      operationId: getMerchant
+      parameters:
+        - name: abn
+          in: query
+          description: The ABN of the merchant
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/Merchant"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+#    get:
+#      description: Get all merchants
+      # used as the method name of the controller
+#      operationId: getAllMerchant
+#      responses:
+#        "200":
+#          description: Success
+#          type: array
+#          items:
+            # a pointer to a definition
+#            $ref: "#/definitions/Merchant"
+        # responses may fall through to errors
+#        default:
+#          description: Error
+#          schema:
+#            $ref: "#/definitions/ErrorResponse"
+    post:
+      description: Register a new merchant ABN
+      operationId: addMerchant
+      parameters:
+        - name: merchant
+          in: body
+          description: Merchant object to store
+          required: true
+          schema:
+            $ref: "#/definitions/Merchant"
+            required:
+              - merchantName
+              - abn
+              - account
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Merchant"
+        "201":
+          description: Success
+          schema:
+            $ref: "#/definitions/Merchant" 
+        "405":
+          description: Invalid input
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      description: Update a merchant
+      operationId: updateMerchant
+      parameters:
+        - name: abn
+          in: query
+          description: Key to merchant to be updated
+          required: true
+          type: string
+        - name: merchant
+          in: body
+          description: New merchant properties. abn is the key so it will not be changed
+          required: true
+          schema:
+            $ref: "#/definitions/Merchant"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Merchant"
+        "201":
+          description: Success
+          schema:
+            $ref: "#/definitions/Merchant" 
+        "405":
+          description: Invalid input
+        "404":
+          description: Not found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      description: Delete a merchant
+      operationId: deleteMerchant
+      parameters:
+        - name: abn
+          in: query
+          description: Key to merchant to be deleted
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+        "201":
+          description: Success
+        "404":
+          description: Not found
+          schema:
+            $ref: "#/definitions/ErrorResponse"
     
 # complex objects have schema definitions
 definitions:
@@ -146,7 +264,7 @@ definitions:
         $ref: "#/definitions/Account"
   Merchant:
     properties:
-      name:
+      merchantName:
         type: string
       abn:
         type: string
